syntax = "proto3";

package proto;
import "annotations.proto";
import "annotations_swagger.proto";


option go_package = ".;proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "IMDB API SERVICE";
    version: "1.0";
    contact: {
      name: "Afdhalul IHsan";
      email: "afdhalulhsn74@gmail.com";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};

message GetListMovieRequest {
  string Keyword =1;
  int32 Page =2;
}

message DataFilmList {
  string Title =1;
  string Year =2;
  string ImdbId =3;
  string Type =4;
  string Poster =5;
  ResponseGetDetailMovie Detail =6;
}

message ResponseListFilm {
  repeated DataFilmList ListFilm =1;
  string TotalResult =2;

}

message GetDetailMovieRequest {
  string ImdbId = 1;
}

message ResponseGetDetailMovie {
    string Title =1;
    string Year =2;
    string Rated =3;
    string Released=4;
    string Runtime =5;
    string Genre =6;
    string Director =7;
    string Writer =8;
    string Actors =9;
    string Plot =10;
    string Language =11;
    string Country =12;
    string Awards =13;
    string Poster =14;
    string Metascore =15;
    string imdbRating =16;
    string imdbVotes =17;
    string imdbID =18;
    string Type =19;
    string DVD =20;
    string BoxOffice =21;
    string Production =22;
    string Website =23;
    string Response =24;
    repeated Ratings Rating =25;
}

message Ratings {
  string Source =1;
  string Value =2;
}

service OmdbMovieService {
  rpc GetListMovieOmdb(GetListMovieRequest)returns(ResponseListFilm) {
    option (google.api.http) = {
      post: "/v1/getlist"
      body: "*"
    };
  }
  rpc GetDatilMovie(GetDetailMovieRequest)returns(ResponseGetDetailMovie) {
    option (google.api.http) = {
      get: "/v1/detail/{ImdbId}"
    };
  }
}